--- a/components/org.wso2.carbon.identity.application.authenticator.oauth2/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.oauth2/pom.xml
@@ -89,6 +89,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <sourcepath>src/main/java</sourcepath>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
