--- a/components/org.wso2.carbon.identity.application.authenticator.oauth2/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.oauth2/pom.xml
@@ -62,6 +62,7 @@
                             javax.servlet.http;version="${javax.servlet.version.range}",
                             org.apache.commons.lang;version="${apache.commons.version.range}",
                             org.apache.commons.logging;version="${apache.commons.logging.version.range}",
+                            org.apache.oltu.oauth2.client;version="${oltu.version.range}",
                             org.apache.oltu.oauth2.client.request;version="${oltu.version.range}",
                             org.apache.oltu.oauth2.client.response;version="${oltu.version.range}",
                             org.apache.oltu.oauth2.common.exception;version="${oltu.version.range}",
@@ -72,14 +73,14 @@
                             org.osgi.service.component;version="${osgi.service.component.imp.pkg.version.range}",
                             org.wso2.carbon.identity.application.authentication.framework.*;version="${identity.framework.package.import.version.range}",
                             org.wso2.carbon.identity.application.common.model;version="${identity.framework.package.import.version.range}",
-                            org.wso2.carbon.identity.core.util;version="${identity.framework.package.import.version.range}"
+                            org.wso2.carbon.identity.core.util;version="${identity.framework.package.import.version.range}",
+                            org.wso2.carbon.identity.base;version="${identity.framework.package.import.version.range}",
                         </Import-Package>
                         <Export-Package>
                             !org.wso2.carbon.identity.application.authenticator.oauth2.internal,
                             org.wso2.carbon.identity.application.authenticator.oauth2.*;
-                            version="1.0.0-SNAPSHOT",
+                            version="${oauth2.generic.exp.pkg.version}",
                         </Export-Package>
-                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
