--- a/components/org.wso2.carbon.identity.application.authenticator.oauth2/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.oauth2/pom.xml
@@ -53,7 +53,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Private-Package>
                             org.wso2.carbon.identity.application.authenticator.oauth2.internal
